# niri-taskbar

./: Cargo.toml  README.md
src/: config.rs  lib.rs  niri.rs  state.rs
src/niri/: state.rs  window_stream.rs
