[package]
name = "niri-taskbar"
description = "Niri taskbar module for Waybar"
version = "0.3.0+niri.25.08"
edition = "2024"
license = "MIT"
repository = "https://github.com/LawnGnome/niri-taskbar"
rust-version = "1.87.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
async-channel = "2.3.1"
async-stream = "0.3.6"
bitflags = "2.9.0"
freedesktop-icons = "0.4.0"
futures = "0.3.31"
itertools = "0.14.0"
linicon = "2.3.0"
niri-ipc = "25.11.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
waybar-cffi = "0.1.0"
zbus = "5.5.0"
